# line-segment-2d-intx

./: .gitignore  CMakeLists.txt  README.md  current_case.txt  data_100000_3.txt  data_10000_2.txt  data_1000_1.txt  data_1000_2.txt  data_100_1.txt  data_100_3.txt  data_31623_3.txt  data_3612_3.txt  data_361_1.txt  data_361_3.txt  graph_segments_2d.py  graph_univariate.py  interval.cpp  interval.h  lseg.cpp  lseg.h  lseg_intersector.cpp  lseg_intersector.h  main.cpp  random_segments_50.txt  random_segs_10000_1.txt  random_segs_1000_1.txt  random_segs_100_1.txt  run_case.sh  run_lineseg.sh  test_intersector.cpp
initial_runtime_data/: data_100000_1.txt  data_100000_2.txt  data_10000_1.txt  data_10000_3.txt  data_1000_3.txt  data_100_2.txt  data_31623_1.txt  data_31623_2.txt  data_3612_1.txt  data_3612_2.txt  data_361_2.txt
